This was an error, but it doesn't matter. I'll Update it later.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 	</style>
 </head>
 <body>
+	<script src="app.js"></script>
 	<header>
 		<h1>Jammy.Com</h1>
 		<h2>The boy who doesn't know how to quit!</h2>
