--- a/index3.html
+++ b/index3.html
@@ -64,7 +64,7 @@
 <body>
 	<header>
 		<h1>Jammy.Com</h1>
-		<h2>The boy who doesn't know how to quit!</h2>
+		<h2 id="home">The boy who doesn't know how to quit!</h2>
 	</header>
 	<section>
 		<h2>This is my first website!</h2>
@@ -88,12 +88,11 @@
 		<p>+23481 494 26 769</p>
 		<p>cornelius.webdev@gmail.com</p>
 	</article>
+	<button onclick="myFunction()">Click Javascript</button>
 	<footer>
 		<p><a href="https://x.com/corneliuswebdev">Follow CorneliusWebDev on Twitter</a></p>
 		<p>Web Beast</p>
 	</footer>
-
-	
 
 
 
